--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "name": "backend",
+  "type": "module",
   "version": "1.0.0",
   "main": "back.js",
-  "scripts": {
-    
-  },
+  "scripts": {},
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "axios": "^1.8.3",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "mongoose": "^8.12.1",
+    "node": "^23.9.0",
+    "nodemon": "^3.1.9"
+  }
 }
