--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.8.3",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "cryptlib": "^1.0.3",
     "express": "^4.21.2",
     "mongoose": "^8.12.1",
     "node": "^23.9.0",
